Fixed template paths and resolved local 500 error

--- a/myapp/templates/base.html
+++ b/myapp/templates/base.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{% block title %}TaskSync{% endblock %}</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-  <link rel="stylesheet" href="{% static 'myapp/styles.css' %}">
+  <link rel="stylesheet" href="{% static 'styles.css' %}">
   {% block head %}{% endblock %}
 </head>
 <body data-theme="light">
@@ -49,6 +49,6 @@
   </main>
 
   <!-- Scripts -->
-  <script src="{% static 'myapp/scripts.js' %}"></script>
+  <script src="{% static 'scripts.js' %}"></script>
 </body>
 </html>
